# ffmpeg_playground

./: .clang-format  .clang-tidy  CMakeLists.txt  README  vcpkg.json
src/: CMakeLists.txt
src/extract_keyframes/: CMakeLists.txt  extract_keyframes.cpp
src/play_video/: CMakeLists.txt  play_video.cpp
src/print_info/: CMakeLists.txt  print_info.cpp
